k8s/ingress_service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  rules:
    - http:
        paths:
          ################
          # URL ROUTING #
          ################
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: api-cluster-ip-service
                port:
                  number: 8000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-cluster-ip-service
                port:
                  number: 8000
          ##########################
          # STATIC FOLDER ROUTING #
          ##########################
          - path: /static/admin/
            pathType: Prefix
            backend:
              service:
                name: api-cluster-ip-service
                port:
                  number: 8000
          - path: /static/rest_framework/
            pathType: Prefix
            backend:
              service:
                name: api-cluster-ip-service
                port:
                  number: 8000
          - path: /static/
            pathType: Prefix
            backend:
              service:
                name: web-cluster-ip-service
                port:
                  number: 3000
          - path: /media/
            pathType: Prefix
            backend:
              service:
                name: web-cluster-ip-service
                port:
                  number: 3000
          ################
          # URL ROUTING #
          ################
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-cluster-ip-service
                port:
                  number: 3000
